# hax

./: CMakeLists.txt  build.sh  main.cpp
Computer/: Computer.cpp  Computer.h
Config/: Config.cpp  Config.h
FileSystem/: FileSystem.cpp  FileSystem.h
Network/: Network.cpp  Network.h
User/: User.cpp  User.h
data/: arabicnames.txt
includes/LuaBridge/detail/: CFunctions.h  Stack.h
scripts/computers/: localhost.lua  shell.lua  ssh.lua  test.lua
scripts/tools/: rpc.lua
